feat: add registration token flow
